--- a/main.html
+++ b/main.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projecto</title>
+    <title>Ze-blog</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
     <header>
-        <img src="8489127cbef60df4ff9aaeda12eeb327.png" alt="Spelunky Logo" id="Spelunky-Logo">
-        <p>A masterpiece in game design.</p>
-        <a href="" class="main-buttons"><span>Story</span></a>
-        <a href="" class="main-buttons"><span>Content</span></a>
-        <a href="" class="main-buttons"><span>Extra Info</span></a>
+        <img src="zeblog.svg" alt="ze-blog logo" id="zeblog-Logo">
+        <p>Random stuff.</p>
+        <a href="games.html" class="main-buttons"><span>Games</span></a>
+        <a href="" class="main-buttons"><span>Music</span></a>
+        <a href="" class="main-buttons"><span>Contacts</span></a>
     </header>
     <footer>
         <div class="footer">
-            <p>A game by Derek Yu.</p>
+            <p>A website by Zé.</p>
         </div>
     </footer>
 </body>
