games page adjustments

--- a/games.html
+++ b/games.html
@@ -13,30 +13,46 @@
 <body>
     <header>
         <h1>Games</h1>
-    </header>
-    <section class="Games-Sections">
-        <h2>Playing</h2>
+    </header> 
+    <div class="Game-Container">
+        <section class="Games-Sections">
+            <h2>Playing</h2>
             <div class="Game-Div">
                 <div class="Game-Main">
-                    <a class="Game-Title" href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank">Control</a>
-                </div>
-                <div class="Game-Content">
                     <img class="Game-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/870780/header.jpg?t=1755611834" alt="Control's Thumbnail">
-                    <p class="Game-Description">A corruptive presence has invaded the Federal Bureau of Control… Only you have the power to stop it. The world is now your weapon in an epic fight to annihilate an ominous enemy through deep and unpredictable environments. Containment has failed, humanity is at stake. Will you regain control? Winner of over 80 awards, Control is a visually stunning third-person action-adventure that will keep you on the edge of your seat. Blending open-ended environments with the signature world-building and storytelling of renowned developer, Remedy Entertainment, Control presents an expansive and intensely gratifying gameplay experience.</p>
+                    <div class="Game-Info">
+                        <a class="Game-Title" href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank">Control</a>
+                        <div class="Info-Titles_Container">
+                            <p class="Info-Titles">Release Date: <span class="Game-Specs">27 Aug, 2020</span></p>
+                            <p class="Info-Titles">Developer: <span class="Game-Specs">Remedy Entertainment</span></p>
+                            <p class="Info-Titles">Genres: <span class="Game-Specs">Action / Supernatural / Story Rich</span> </p>
+                            <p class="Info-Titles">Started Playing: <span class="Game-Specs">02 Nov, 2025</span></p>
+                            <p class="Info-Titles">Current Rating: <span class="Game-Specs">9/10</span></p>
+                            <p class="Info-Titles">Thoughts:<span class="Game-Specs">Adorava conseguir arrancar um pedaço de uma parede com a mente para atirar aos meus inimigos.</span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="Games-Sections">
+            <h2>Finished</h2>
             <div class="Game-Div">
                 <div class="Game-Main">
-                    <a class="Game-Title" href="https://store.steampowered.com/app/1629520/A_Little_to_the_Left/">A Little to the Left</a>
-                </div>
-                <div class="Game-Content">
-                    <img class="Game-Image" src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1629520/header.jpg?t=1763464682" alt="A Little to the left's Thumbnail">
-                    <p class="Game-Description">Sort, stack, and organize household objects into just the right spot in A Little to the Left, a tidy puzzle game with a mischievous cat who likes to shake things up!</p>
+                    <img class="Game-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/894020/header.jpg?t=1732729764" alt="Death's Door's Thumbnail">
+                    <div class="Game-Info">
+                        <a class="Game-Title" href="https://store.steampowered.com/app/894020/Deaths_Door/" target="_blank">Death's Door</a>
+                        <div class="Info-Titles_Container">
+                            <p class="Info-Titles">Release Date: <span class="Game-Specs">20 Jul, 2021</span></p>
+                            <p class="Info-Titles">Developer: <span class="Game-Specs">Acid Nerve</span></p>
+                            <p class="Info-Titles">Genres: <span class="Game-Specs">Cute / Souls-Like / Cartoony</span> </p>
+                            <p class="Info-Titles">Finished Playing: <span class="Game-Specs">09 Aug, 2025</span></p>
+                            <p class="Info-Titles">Final Rating: <span class="Game-Specs">10/10</span></p>
+                            <p class="Info-Titles">Thoughts:<span class="Game-Specs"></span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-    </section>
-    <section class="Games-Sections">
-        <h2>Finished</h2>
-    </section>
+        </section> 
+    </div>
 </body>
 </html>
