added music page

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
         <img src="zeblog.svg" alt="ze-blog logo" id="zeblog-Logo">
         <p>Random stuff.</p>
         <a href="games.html" class="main-buttons"><span>Games</span></a>
-        <a href="" class="main-buttons"><span>Music</span></a>
+        <a href="music.html" class="main-buttons"><span>Music</span></a>
         <a href="" class="main-buttons"><span>Contacts</span></a>
     </header>
     <footer>
