--- a/games.html
+++ b/games.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>Games</h1>
+        <p>List of Games I'm currently playing/have played</p>
     </header> 
     <div class="Game-Container">
         <section class="Games-Sections">
