added content to music page and some overall fixes

--- a/music.html
+++ b/music.html
@@ -35,6 +35,22 @@
                     </div>
                 </div>
             </div>
+            <div class="Main-Div">
+                <div class="Sub-Div">
+                    <img class="Main-Image "src="https://f4.bcbits.com/img/a2662516338_10.jpg" alt="Choke Enough cover art">
+                    <div class="Info">
+                        <a class="Title" href="https://oklou.bandcamp.com/album/choke-enough" target="_blank">Choke Enough</a>
+                        <div class="Info-Titles_Container">
+                            <p class="Info-Titles">Artist: <span class="Specs">Oklou</span></p>
+                            <p class="Info-Titles">Release Date: <span class="Specs">07 Feb, 2025</span></p>
+                            <p class="Info-Titles">Genres: <span class="Specs">Ambient Eletronic / Alternative / Indie Pop </span> </p>
+                            <p class="Info-Titles">Rating: <span class="Specs">10/10</span></p>
+                            <p class="Info-Titles">Thoughts:<span class="Specs">Album lindo de inicio ao fim, cheio de momentos únicos. A oklou nunca falha.</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+    </div>
 </body>
 </html>
