--- a/games.html
+++ b/games.html
@@ -15,40 +15,40 @@
         <h1>Games</h1>
         <p>List of Games I'm currently playing/have played</p>
     </header> 
-    <div class="Game-Container">
-        <section class="Games-Sections">
+    <div class="Container">
+        <section class="Main-Sections">
             <h2>Playing</h2>
-            <div class="Game-Div">
-                <div class="Game-Main">
-                    <img class="Game-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/870780/header.jpg?t=1755611834" alt="Control's Thumbnail">
-                    <div class="Game-Info">
-                        <a class="Game-Title" href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank">Control</a>
+            <div class="Main-Div">
+                <div class="Sub-Div">
+                    <img class="Main-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/870780/header.jpg?t=1755611834" alt="Control's Thumbnail">
+                    <div class="Info">
+                        <a class="Title" href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank">Control</a>
                         <div class="Info-Titles_Container">
-                            <p class="Info-Titles">Release Date: <span class="Game-Specs">27 Aug, 2020</span></p>
-                            <p class="Info-Titles">Developer: <span class="Game-Specs">Remedy Entertainment</span></p>
-                            <p class="Info-Titles">Genres: <span class="Game-Specs">Action / Supernatural / Story Rich</span> </p>
-                            <p class="Info-Titles">Started Playing: <span class="Game-Specs">02 Nov, 2025</span></p>
-                            <p class="Info-Titles">Current Rating: <span class="Game-Specs">9/10</span></p>
-                            <p class="Info-Titles">Thoughts:<span class="Game-Specs">Adorava conseguir arrancar um pedaço de uma parede com a mente para atirar aos meus inimigos.</span></p>
+                            <p class="Info-Titles">Release Date: <span class="Specs">27 Aug, 2020</span></p>
+                            <p class="Info-Titles">Developer: <span class="Specs">Remedy Entertainment</span></p>
+                            <p class="Info-Titles">Genres: <span class="Specs">Action / Supernatural / Story Rich</span> </p>
+                            <p class="Info-Titles">Started Playing: <span class="Specs">02 Nov, 2025</span></p>
+                            <p class="Info-Titles">Current Rating: <span class="Specs">9/10</span></p>
+                            <p class="Info-Titles">Thoughts:<span class="Specs">Adorava conseguir arrancar um pedaço de uma parede com a mente para atirar aos meus inimigos.</span></p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="Games-Sections">
+        <section class="Main-Sections">
             <h2>Finished</h2>
-            <div class="Game-Div">
-                <div class="Game-Main">
-                    <img class="Game-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/894020/header.jpg?t=1732729764" alt="Death's Door's Thumbnail">
-                    <div class="Game-Info">
-                        <a class="Game-Title" href="https://store.steampowered.com/app/894020/Deaths_Door/" target="_blank">Death's Door</a>
+            <div class="Main-Div">
+                <div class="Sub-Div">
+                    <img class="Main-Image "src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/894020/header.jpg?t=1732729764" alt="Death's Door's Thumbnail">
+                    <div class="Info">
+                        <a class="Title" href="https://store.steampowered.com/app/894020/Deaths_Door/" target="_blank">Death's Door</a>
                         <div class="Info-Titles_Container">
-                            <p class="Info-Titles">Release Date: <span class="Game-Specs">20 Jul, 2021</span></p>
-                            <p class="Info-Titles">Developer: <span class="Game-Specs">Acid Nerve</span></p>
-                            <p class="Info-Titles">Genres: <span class="Game-Specs">Cute / Souls-Like / Cartoony</span> </p>
-                            <p class="Info-Titles">Finished Playing: <span class="Game-Specs">09 Aug, 2025</span></p>
-                            <p class="Info-Titles">Final Rating: <span class="Game-Specs">10/10</span></p>
-                            <p class="Info-Titles">Thoughts:<span class="Game-Specs"></span></p>
+                            <p class="Info-Titles">Release Date: <span class="Specs">20 Jul, 2021</span></p>
+                            <p class="Info-Titles">Developer: <span class="Specs">Acid Nerve</span></p>
+                            <p class="Info-Titles">Genres: <span class="Specs">Cute / Souls-Like / Cartoony</span> </p>
+                            <p class="Info-Titles">Finished Playing: <span class="Specs">09 Aug, 2025</span></p>
+                            <p class="Info-Titles">Final Rating: <span class="Specs">10/10</span></p>
+                            <p class="Info-Titles">Thoughts:<span class="Specs"></span></p>
                         </div>
                     </div>
                 </div>
